Fix Samba permissions

--- a/conf/smb.conf
+++ b/conf/smb.conf
@@ -15,13 +15,16 @@
   pam password change = yes
   map to guest = bad user
   usershare allow guests = yes
+  unix extensions = no
 
 [homes]
   comment = Home Directories
   browseable = no
   read only = no
-  create mask = 0640
-  directory mask = 0750
+  create mask = 0600
+  directory mask = 0700
+  force create mode = 0600
+  force directory mode = 0700
   valid users = %S
 
 [media]
@@ -31,7 +34,9 @@
   guest ok = no
   read only = no
   create mask = 0660
-  directory mask = 0770
+  directory mask = 2770
+  force create mode = 0660
+  force directory mode = 2770
   force group = users
 
 [printers]
