Enable file system ACL

--- a/conf/smb.conf
+++ b/conf/smb.conf
@@ -2,11 +2,16 @@
   workgroup = WORKGROUP
   server string = %h server
   dns proxy = no
+  time server = no
+  wins support = no
   log file = /var/log/samba/log.%m
   max log size = 1000
   syslog = 0
   panic action = /usr/share/samba/panic-action %d
   server role = standalone server
+  use sendfile = yes
+  aio read size = 16384
+  aio write size = 16384
   passdb backend = tdbsam
   obey pam restrictions = yes
   unix password sync = yes
@@ -15,7 +20,7 @@
   pam password change = yes
   map to guest = bad user
   usershare allow guests = yes
-  unix extensions = no
+  unix extensions = yes
 
 [homes]
   comment = Home Directories
@@ -30,14 +35,21 @@
 [media]
   path = /mnt/data/media
   comment = Media Data
-  browseable = yes
   guest ok = no
   read only = no
+  browseable = yes
+  inherit acls = yes
+  inherit permissions = no
+  ea support = no
+  store dos attributes = no
+  printable = no
   create mask = 0660
-  directory mask = 2770
-  force create mode = 0660
-  force directory mode = 2770
-  force group = users
+  force create mode = 0600
+  directory mask = 0770
+  force directory mode = 0700
+  hide dot files = yes
+  ;force user = root
+  ;force group = root
 
 [printers]
   comment = All Printers
