Revert usage of ACLs

--- a/conf/smb.conf
+++ b/conf/smb.conf
@@ -19,12 +19,15 @@
   passwd chat = *Enter\snew\s*\spassword:* %n\n *Retype\snew\s*\spassword:* %n\n *password\supdated\ssuccessfully* .
   pam password change = yes
   map to guest = bad user
-  usershare allow guests = yes
-  unix extensions = yes
+  usershare allow guests = no
+  unix extensions = no
+  inherit acls = no
+  inherit permissions = no
+  browseable = no
+  read only = yes
 
 [homes]
   comment = Home Directories
-  browseable = no
   read only = no
   create mask = 0600
   directory mask = 0700
@@ -38,15 +41,11 @@
   guest ok = no
   read only = no
   browseable = yes
-  inherit acls = yes
-  inherit permissions = no
-  ea support = no
-  store dos attributes = no
-  printable = no
+  force group = users
   create mask = 0660
   force create mode = 0660
   directory mask = 0770
-  force directory mode = 0770
+  force directory mode = 2770
   hide dot files = yes
 
 [printers]
