Create subfolders in conf/ folder

--- a/conf/samba/smb.conf
+++ b/conf/samba/smb.conf
@@ -9,9 +9,9 @@
   syslog = 0
   panic action = /usr/share/samba/panic-action %d
   server role = standalone server
-  use sendfile = yes
-  aio read size = 16384
-  aio write size = 16384
+  ;use sendfile = yes
+  ;aio read size = 16384
+  ;aio write size = 16384
   passdb backend = tdbsam
   obey pam restrictions = yes
   unix password sync = yes
